src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .active-tab {
    @apply text-white font-semibold before:w-full before:h-0.5 before:absolute relative before:bg-accent before:bottom-0 before:left-0 before:right-[50%];
  }
  .pointer {
    @apply relative before:bg-muted before:w-1 before:h-1 before:absolute before:left-0 before:top-1.5 before:rounded-full;
  }
  .card {
    @apply rounded-2xl border border-grey-blur-20;
  }
  .active-tab-bottom {
    @apply md:font-semibold text-sm text-white relative before:absolute before:w-full before:h-0.5 before:bg-loozr-purple before:bottom-[-13px];
  }
  .active-tab-top {
  }
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

button:disabled {
  opacity: 0.6;
}

.fullpage-loader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(255, 255, 255, 0.6);
}
.fullpage-loader div {
  color: #fff;
  mix-blend-mode: difference;
  font-size: 21px;
}

.name-tag {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  word-break: break-all;
}

